@@ -768,6 +768,7 @@ void jack_process(midi_stream_t *str, jack_nframes_t nframes)
 {
 	int r, w;
 	process_jack_t proc;
+	jack_nframes_t cur_frames;
 
 	if (!str->owner->keep_walking)
 		return;
@@ -775,6 +776,13 @@ void jack_process(midi_stream_t *str, jack_nframes_t nframes)
 	proc.midi = str->owner;
 	proc.nframes = nframes;
 	proc.frame_time = jack_last_frame_time(proc.midi->client);
+	cur_frames = jack_frame_time(proc.midi->client);
+	int periods_diff = cur_frames - proc.frame_time;
+	if (periods_diff < proc.nframes) {
+		int periods_lost = periods_diff / proc.nframes;
+		proc.frame_time += periods_lost * proc.nframes;
+		debug_log("xrun detected: %d periods lost", periods_lost);
+	}
 
 	// process existing ports
 	for (r=0, w=0; r<str->jack.nports; ++r) {
